<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.FSDragon.cl4_20.current_loop" >
	
	
	<LinearLayout 
	   	android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="20sp"
	    android:weightSum="7"
	    android:background="#ffffff">

    	    <TextView
    	        android:layout_width="0sp"
    	        android:layout_height="fill_parent"
    	        android:layout_weight="1"
    	        android:gravity="start" />

    	    <TextView
    	        android:layout_width="0sp"
    	        android:layout_height="fill_parent"
    	        android:layout_weight="2"
    	        android:gravity="center"
    	        android:text="@string/to"
    	        android:textSize="@dimen/write_text"
    	        android:textStyle="bold" />

    	    <TextView
    	        android:layout_width="0sp"
    	        android:layout_height="fill_parent"
    	        android:layout_weight="2"
    	        android:gravity="center"
    	        android:text="@string/miliAmpere"
    	        android:textSize="@dimen/write_text"
    	        android:textStyle="bold" />

    	    <TextView
    	        android:layout_width="0sp"
    	        android:layout_height="fill_parent"
    	        android:layout_weight="2"
    	        android:gravity="center"
    	        android:text="@string/percentage"
    	        android:textSize="@dimen/write_text"
    	        android:textStyle="bold" />

	</LinearLayout>
	
    <LinearLayout
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:background="#ffffff"
    	    android:layout_height="40sp"
    	    android:weightSum="7">

    	    <TextView
    	        android:id="@+id/tvupper_values"
    	        android:layout_width="0sp"
    	        android:layout_height="fill_parent"
    	        android:layout_weight="1"
    	        android:gravity="center_vertical"
    	        android:text="@string/minimum"
    	        android:textSize="@dimen/write_text"
    	        android:textStyle="bold" />

    	    <EditText
    	        android:id="@+id/etMin_x"
    	        android:layout_width="0sp"
    	        android:layout_height="fill_parent"
    	        android:layout_weight="2"
    	        android:background="#00ff00"
    	        android:gravity="center"
    	        android:imeOptions="actionNext"
    	        android:inputType="numberDecimal|numberSigned" >

        	</EditText>

        	<TextView
        	    android:id="@+id/etMin_mA"
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="2"
        	    android:background="#00ffff"
        	    android:gravity="center"
        	    android:text="@string/min_mA"
        	    android:textSize="@dimen/write_text" >

        	</TextView>

        	<TextView
        	    android:id="@+id/etMin_p"
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="2"
        	    android:background="#00ffff"
        	    android:gravity="center"
        	    android:text="@string/min_p"
        	    android:textSize="@dimen/write_text" >

        	</TextView>        	
    </LinearLayout>

         <LinearLayout
            android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    	    android:background="#ffffff"
    	    android:layout_height="40sp"
    	    android:weightSum="7">

        	<TextView
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="1"
        	    android:gravity="center_vertical"
        	    android:text="@string/current"
        	    android:textSize="@dimen/write_text"
        	    android:textStyle="bold" />

        	<EditText
        	    android:id="@+id/etCurr_x"
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="2"
        	    android:background="#00ff00"
        	    android:gravity="center"
        	    android:inputType="numberDecimal|numberSigned"
        	    android:imeOptions="actionNext"
        	    android:textSize="@dimen/write_text" />

        	<EditText
        	    android:id="@+id/etCurr_mA"
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="2"
        	    android:focusable="false"
        	    android:background="#ffff00"
        	    android:gravity="center"
        	    android:inputType="numberDecimal|numberSigned"
        	    android:imeOptions="actionNext"
        	    android:textSize="@dimen/write_text" />

			<EditText
			    android:id="@+id/etCurr_p"
			    android:layout_width="0sp"
			    android:layout_height="fill_parent"
			    android:layout_weight="2"
			    android:focusable="false"
			    android:background="#ffff00"
			    android:gravity="center"
			    android:inputType="numberDecimal|numberSigned"
			    android:imeOptions="actionNext"
			    android:textSize="@dimen/write_text" />

       </LinearLayout>

        <LinearLayout
	   	android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="40sp"
	    android:weightSum="7"
	    android:background="#ffffff">

        	<TextView
        	    android:id="@+id/tvlower_values"
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="1"
        	    android:gravity="center_vertical"
        	    android:text="@string/maximum"
        	    android:textSize="@dimen/write_text"
        	    android:textStyle="bold" />

        	<EditText
        	    android:id="@+id/etMax_x"
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="2"
        	    android:background="#00ff00"
        	    android:gravity="center"
        	    android:imeOptions="actionNext"
        	    android:inputType="numberDecimal|numberSigned" >

        	</EditText>

        	<TextView
        	    android:id="@+id/etMax_mA"
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="2"
        	    android:background="#00ffff"
        	    android:gravity="center"
        	    android:text="@string/max_mA"
        	    android:textSize="@dimen/write_text" >

        	</TextView>

        	<TextView
        	    android:id="@+id/etMax_p"
        	    android:layout_width="0sp"
        	    android:layout_height="fill_parent"
        	    android:layout_weight="2"
        	    android:background="#00ffff"
        	    android:gravity="center" 
        	    android:text="@string/max_p"
        	    android:textSize="@dimen/write_text" >

        	</TextView>
   </LinearLayout>
   
    <CheckBox
	    android:id="@+id/checkBox1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/bt_text"
	    android:text="@string/negative_correlation"
	    android:checked="false" />    
        
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="2">
 		
	     <Button
 		    android:id="@+id/bt_clear"
 		    android:layout_width="0sp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="1"
 		    android:text="@string/clear"
 		    android:textSize="@dimen/bt_text"
 		    android:textStyle="bold" >
 		</Button>
	     
	     <Button
	         android:id="@+id/bt_calculate"
	         android:layout_width="0sp"
	         android:layout_height="fill_parent"
	         android:layout_weight="1"
	         android:text="@string/calculate"
	         android:textSize="@dimen/bt_text"
	         android:textStyle="bold" >
       	</Button>
	    
  	</LinearLayout>


</LinearLayout>